--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -179,41 +179,37 @@
     "simulateUpOnTree": {
       "description": "__MSG_command_simulateUpOnTree__",
       "suggested_key": {
-        "default": "Ctrl+Shift+Up",
-        "mac":     "Command+Shift+Up"
+        "default": "Alt+Shift+Up"
       }
     },
     "simulateDownOnTree": {
       "description": "__MSG_command_simulateDownOnTree__",
       "suggested_key": {
-        "default": "Ctrl+Shift+Down",
-        "mac":     "Command+Shift+Down"
+        "default": "Alt+Shift+Down"
       }
     },
     "simulateLeftOnTree": {
       "description": "__MSG_command_simulateLeftOnTree__",
       "suggested_key": {
-        "default": "Ctrl+Shift+Left",
-        "mac":     "Command+Shift+Left"
+        "default": "Alt+Shift+Left"
       }
     },
     "simulateRightOnTree": {
       "description": "__MSG_command_simulateRightOnTree__",
       "suggested_key": {
-        "default": "Ctrl+Shift+Right",
-        "mac":     "Command+Shift+Right"
+        "default": "Alt+Shift+Right"
       }
     },
     "tabbarUp": {
       "description": "__MSG_command_tabbarUp__",
       "suggested_key": {
-        "default": "Alt+Shift+Up"
+        "default": "Alt+Up"
       }
     },
     "tabbarPageUp": {
       "description": "__MSG_command_tabbarPageUp__",
       "suggested_key": {
-        "default": "Alt+Shift+PageUp"
+        "default": "Alt+PageUp"
       }
     },
     "tabbarHome": {
@@ -225,19 +221,19 @@
     "tabbarDown": {
       "description": "__MSG_command_tabbarDown__",
       "suggested_key": {
-        "default": "Alt+Shift+Down"
+        "default": "Alt+Down"
       }
     },
     "tabbarPageDown": {
       "description": "__MSG_command_tabbarPageDown__",
       "suggested_key": {
-        "default": "Alt+Shift+PageDown"
+        "default": "Alt+PageDown"
       }
     },
     "tabbarEnd": {
       "description": "__MSG_command_tabbarEnd__",
       "suggested_key": {
-        "default": "Alt+Shift+End"
+        "default": "Alt+End"
       }
     },
     "toggleSubPanel": {
