--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -262,6 +262,7 @@
   },
   "web_accessible_resources": [
     "/resources/group-tab.html*",
+    "/resources/icons/*",
     "/sidebar/styles/icons/*"
   ],
   "protocol_handlers": [
