--- a/webextensions/package.json
+++ b/webextensions/package.json
@@ -2,18 +2,21 @@
   "name": "treestyletab-we",
   "version": "0.0.0",
   "engines": {
-    "node": ">=13.2"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
     "babel-core": "^5.8.38",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^3.0.0",
-    "eslint": "^7.18.0",
+    "eslint": "^9.17.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-import": "^2.20.1",
+    "globals": "^15.14.0",
     "jsonlint-cli": "*",
     "lodash": ">=4.17.21",
     "minimist": ">=1.2.6",
