--- a/webextensions/package.json
+++ b/webextensions/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
-    "babel-core": "^5.8.38",
+    "@eslint/compat": "^1.2.4",
+    "babel-core": "^4.7.16",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "eslint": "^9.17.0",
